--- a/privately/app/src/main/res/layout/activity_company_profiles.xml
+++ b/privately/app/src/main/res/layout/activity_company_profiles.xml
@@ -110,6 +110,16 @@
                         android:background="@color/text_9" />
 
                 </RelativeLayout>
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <cn.jzvd.JzvdStd
+                        android:id="@+id/jz_video"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp" />
+                </FrameLayout>
             </LinearLayout>
 
 
@@ -152,14 +162,16 @@
                         android:background="@color/text_9" />
 
                 </RelativeLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_pic"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:background="@color/white">
+
+                </androidx.recyclerview.widget.RecyclerView>
             </LinearLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_pic"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            </androidx.recyclerview.widget.RecyclerView>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -182,6 +194,7 @@
 
 
                     <TextView
+                        android:id="@+id/tv_prd_list"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
@@ -232,12 +245,15 @@
                         android:textSize="@dimen/text_one_five" />
 
                     <EditText
+                        android:id="@+id/et_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:background="@drawable/edittext_bg"
                         android:hint="请输入姓名"
-                        android:padding="10dp" />
+                        android:padding="7dp"
+                        android:textColor="@color/text_3"
+                        android:textSize="@dimen/text_one_five" />
 
                 </LinearLayout>
 
@@ -254,16 +270,20 @@
                         android:textSize="@dimen/text_one_five" />
 
                     <EditText
+                        android:id="@+id/et_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:background="@drawable/edittext_bg"
                         android:hint="请输入号码"
-                        android:padding="10dp" />
+                        android:padding="7dp"
+                        android:textColor="@color/text_3"
+                        android:textSize="@dimen/text_one_five" />
 
                 </LinearLayout>
 
                 <EditText
+                    android:id="@+id/et_content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
@@ -272,7 +292,9 @@
                     android:gravity="left"
                     android:hint="请输入要留言的内容"
                     android:minHeight="150dp"
-                    android:padding="10dp" />
+                    android:padding="10dp"
+                    android:textColor="@color/text_3"
+                    android:textSize="@dimen/text_one_five" />
 
 
             </LinearLayout>
