--- a/privately/app/src/main/res/layout/activity_event_details.xml
+++ b/privately/app/src/main/res/layout/activity_event_details.xml
@@ -52,7 +52,7 @@
                 <com.facebook.drawee.view.SimpleDraweeView xmlns:fresco="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/iv_image"
                     android:layout_width="match_parent"
-                    android:layout_height="110dp"
+                    android:layout_height="200dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginTop="15dp"
@@ -75,7 +75,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="7dp"
                     android:textColor="@color/text_3"
-                    android:textSize="@dimen/text_one_three"
+                    android:textSize="@dimen/text_one_five"
                     tools:text="杨东、玉红、刘辉、沈大海、徐继哲、吴波等" />
 
 
@@ -94,7 +94,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="7dp"
                     android:textColor="@color/text_3"
-                    android:textSize="@dimen/text_one_three"
+                    android:textSize="@dimen/text_one_five"
                     tools:text="2019-07-07  16:00" />
 
                 <TextView
@@ -112,7 +112,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="7dp"
                     android:textColor="@color/text_3"
-                    android:textSize="@dimen/text_one_three"
+                    android:textSize="@dimen/text_one_five"
                     tools:text="北京市丰台区丰台体育馆中心" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
@@ -129,6 +129,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="活动详情"
+                    android:textColor="@color/AC9472"
                     android:textSize="@dimen/text_one_six" />
 
 
@@ -138,8 +139,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     app:DrawableAndTextGravity="right"
-                    app:contentTextColor="@color/colorPrimaryDark"
-                    app:expandCollapseTextColor="@color/colorAccent"
+                    app:contentTextColor="@color/text_3"
+                    app:expandCollapseTextColor="@color/AC9472"
                     app:expandText="更多"
                     app:maxCollapsedLines="6" />
 
@@ -157,6 +158,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="活动成果"
+                    android:textColor="@color/AC9472"
                     android:textSize="@dimen/text_one_six" />
 
                 <com.zsoe.businesssharing.commonview.ExpandableTextView
