--- a/privately/app/src/main/res/layout/comm_title_bar.xml
+++ b/privately/app/src/main/res/layout/comm_title_bar.xml
@@ -13,9 +13,7 @@
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingLeft="@dimen/margin_left"
-        android:paddingRight="@dimen/margin_left">
+        android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/title_left_iv_layout"
@@ -27,7 +25,8 @@
                 android:id="@+id/title_left_iv"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:paddingLeft="6dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
                 android:src="@mipmap/back_arrow" />
 
         </LinearLayout>
@@ -49,32 +48,33 @@
         android:layout_alignParentRight="true"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/margin_left"
-        android:paddingRight="@dimen/margin_right">
+
+        >
 
         <ImageView
             android:id="@+id/title_rigth_second"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="18dp"
+            android:layout_height="match_parent"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             android:visibility="gone" />
 
         <ImageView
             android:id="@+id/title_rigth_iv"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="4dp"
-            android:padding="5dp"
+            android:layout_height="match_parent"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             android:visibility="gone" />
 
         <TextView
             android:id="@+id/title_rigth_tv"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             android:textColor="@color/text_3"
             android:textSize="16sp"
             android:visibility="gone"
