--- a/privately/app/src/main/res/values/styles.xml
+++ b/privately/app/src/main/res/values/styles.xml
@@ -10,6 +10,11 @@
         <item name="android:windowIsTranslucent">false</item>
     </style>
 
+    <style name="Theme.AppCompat.Light.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <style name="XUpdate_ProgressBar_Red">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
