--- a/privately/app/src/main/res/layout/cp_list_item_default_layout.xml
+++ b/privately/app/src/main/res/layout/cp_list_item_default_layout.xml
@@ -3,13 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cp_list_item_name"
     android:layout_width="match_parent"
-    android:layout_height="?attr/cpListItemHeight"
-    android:background="?attr/selectableItemBackground"
+    android:layout_height="@dimen/cp_list_item_height"
+    android:background="@color/white"
     android:clickable="true"
     android:focusable="true"
     android:gravity="center_vertical"
     android:paddingLeft="16dp"
     android:paddingStart="16dp"
-    android:textColor="?attr/cpListItemTextColor"
-    android:textSize="?attr/cpListItemTextSize"
+    android:textColor="@color/cp_color_gray_deep"
+    android:textSize="@dimen/cp_list_item_text_size"
     tools:ignore="RtlSymmetry" />
