--- a/privately/app/src/main/res/layout/cp_list_item_location_layout.xml
+++ b/privately/app/src/main/res/layout/cp_list_item_location_layout.xml
@@ -9,20 +9,20 @@
     <FrameLayout
         android:id="@+id/cp_list_item_location_layout"
         android:layout_width="wrap_content"
-        android:layout_height="?attr/cpListItemHeight"
+        android:layout_height="wrap_content"
         android:clickable="true"
-        android:focusable="true"
-        android:foreground="?attr/selectableItemBackground"
-        tools:ignore="UselessParent">
+        android:focusable="true">
+
         <TextView
             android:id="@+id/cp_list_item_location"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:paddingTop="@dimen/cp_grid_item_padding"
             android:paddingBottom="@dimen/cp_grid_item_padding"
-            android:gravity="center"
-            android:background="?attr/cpGridItemBackground"
-            android:textSize="?attr/cpListItemTextSize"
-            android:textColor="?attr/cpListItemTextColor"/>
+            android:background="@drawable/cp_location_item_bg"
+            android:textColor="@color/AC9472"
+            android:textSize="@dimen/cp_list_item_text_size" />
     </FrameLayout>
 </LinearLayout>
