--- a/privately/app/src/main/res/drawable/btn_mutli_item.xml
+++ b/privately/app/src/main/res/drawable/btn_mutli_item.xml
@@ -7,5 +7,5 @@
     <corners android:radius="12dp" />
     <stroke
         android:width="0.7dp"
-        android:color="#999999" />
+        android:color="@color/text_b6" />
 </shape>
