--- a/privately/app/src/main/res/drawable/cp_grid_item_bg.xml
+++ b/privately/app/src/main/res/drawable/cp_grid_item_bg.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/cp_color_grid_item_bg" />
+    <solid android:color="@color/white" />
     <corners
         android:bottomLeftRadius="4dp"
         android:bottomRightRadius="4dp"
         android:radius="4dp"
         android:topLeftRadius="4dp"
         android:topRightRadius="4dp"/>
+
+    <stroke
+        android:width="0.7dp"
+        android:color="@color/text_b6" />
 </shape>
