--- a/privately/app/src/main/res/layout/activity_dynamic_details.xml
+++ b/privately/app/src/main/res/layout/activity_dynamic_details.xml
@@ -10,7 +10,7 @@
 
     <include layout="@layout/comm_title_bar" />
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="none">
@@ -46,7 +46,7 @@
             <com.facebook.drawee.view.SimpleDraweeView xmlns:fresco="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/iv_image"
                 android:layout_width="match_parent"
-                android:layout_height="110dp"
+                android:layout_height="200dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginTop="15dp"
@@ -55,7 +55,7 @@
                 fresco:placeholderImageScaleType="fitCenter" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tv_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
@@ -71,5 +71,5 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
 
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </androidx.appcompat.widget.LinearLayoutCompat>
