--- a/privately/app/src/main/res/layout/cp_search_view.xml
+++ b/privately/app/src/main/res/layout/cp_search_view.xml
@@ -6,50 +6,41 @@
     android:layout_height="wrap_content"
     android:background="@android:color/white"
     android:gravity="center_vertical"
-    android:padding="16dp"
+    android:padding="10dp"
     tools:showIn="@layout/cp_dialog_city_picker">
 
-    <EditText
-        android:id="@+id/cp_search_box"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@null"
-        android:hint="?attr/cpSearchHintText"
-        android:maxLength="20"
-        android:maxLines="1"
-        android:textCursorDrawable="?attr/cpSearchCursorDrawable"
-        android:textColor="?attr/cpSearchTextColor"
-        android:textColorHint="?attr/cpSearchHintTextColor"
-        android:textSize="?attr/cpSearchTextSize" />
-
-    <ImageView
-        android:id="@+id/cp_clear_all"
-        android:layout_width="20dp"
-        android:layout_height="match_parent"
-        android:padding="2dp"
-        android:visibility="gone"
-        android:scaleType="fitCenter"
-        android:src="?attr/cpClearTextIcon" />
-
-    <Space
-        android:layout_width="6dp"
-        android:layout_height="match_parent" />
-
-    <View
-        android:layout_width="1px"
-        android:layout_height="14dp"
-        android:background="@color/cp_color_gray_light"/>
-
-    <Space
-        android:layout_width="16dp"
-        android:layout_height="match_parent" />
-
-    <TextView
-        android:id="@+id/cp_cancel"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/cp_cancel"
-        android:textColor="?attr/cpCancelTextColor"
-        android:textSize="?attr/cpCancelTextSize" />
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/shap_search">
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/cp_search_box"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/cp_clear_all"
+            android:background="@null"
+            android:drawableLeft="@mipmap/sousuo"
+            android:drawablePadding="5dp"
+            android:hint="请输入要搜索的内容"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textColor="@color/text_3"
+            android:textSize="15dp" />
+
+        <ImageView
+
+            android:id="@+id/cp_clear_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
+            android:scaleType="fitCenter"
+            android:src="@mipmap/delete"
+            android:visibility="gone" />
+
+    </RelativeLayout>
 </LinearLayout>
