--- a/privately/app/src/main/res/layout/fragment_home.xml
+++ b/privately/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,45 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/search_layout" />
+
+    <RelativeLayout
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tv_diqu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:drawableRight="@mipmap/home_xiajiantou"
+            android:drawablePadding="5dp"
+            android:paddingLeft="5dp"
+            android:paddingTop="10dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="10dp"
+            android:text="北京市"
+            android:textSize="@dimen/text_one_five"
+            android:textColor="@color/text_3" />
+
+        <include
+            layout="@layout/search_layout"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_toLeftOf="@+id/iv_xiaoxi"
+            android:layout_toRightOf="@id/tv_diqu" />
+
+
+        <ImageView
+            android:id="@+id/iv_xiaoxi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:padding="10dp"
+            android:src="@mipmap/home_xiaoxi" />
+
+    </RelativeLayout>
 
 
     <com.zsoe.businesssharing.commonview.PtrClassicRefreshLayout xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
