--- a/privately/app/src/main/res/layout/item_product_list_layout.xml
+++ b/privately/app/src/main/res/layout/item_product_list_layout.xml
@@ -10,18 +10,19 @@
         android:id="@+id/product_image"
         android:layout_width="120dp"
         android:layout_height="80dp"
-        fresco:roundedCornerRadius="5dp"
         android:layout_centerVertical="true"
         android:layout_margin="15dp"
         android:scaleType="fitXY"
         fresco:placeholderImage="@mipmap/icon_default"
-        fresco:placeholderImageScaleType="fitCenter" />
+        fresco:placeholderImageScaleType="fitCenter"
+        fresco:roundedCornerRadius="5dp" />
 
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/iv_shoucang"
         android:layout_toRightOf="@+id/product_image"
         android:orientation="vertical">
 
@@ -30,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/text_3"
-            android:textSize="17dp"
+            android:textSize="@dimen/text_one_five"
             tools:text="农机设备出售" />
 
 
@@ -52,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
+        android:padding="10dp"
         android:src="@mipmap/shoucang_pre" />
 
     <View
