--- a/privately/app/src/main/res/values/colors.xml
+++ b/privately/app/src/main/res/values/colors.xml
@@ -180,7 +180,7 @@
     <color name="cp_color_gray_light">#cdcdcd</color>
     <color name="cp_color_gray">#999999</color>
     <color name="cp_color_gray_deep">#666666</color>
-    <color name="cp_color_gray_dark">#333333</color>
+    <color name="cp_color_gray_dark">#22333333</color>
     <color name="cp_color_section_bg">#EDEDED</color>
     <color name="cp_color_grid_item_bg">#f5f5f5</color>
 
