--- a/privately/app/src/main/res/values/styles.xml
+++ b/privately/app/src/main/res/values/styles.xml
@@ -210,7 +210,7 @@
         <item name="android:windowExitAnimation">@anim/cp_push_bottom_out</item>
     </style>
 
-    <style name="DefaultCityPickerTheme" parent="AppTheme">
+    <style name="CityPickerTheme" parent="AppTheme">
         <item name="cpCancelTextSize">@dimen/cp_cancel_text_size</item>
         <item name="cpCancelTextColor">@color/cp_color_gray</item>
 
@@ -294,4 +294,10 @@
         <item name="android:padding">15dp</item>
         <item name="android:background">@drawable/simple_item_background_selector</item>
     </style>
+
+    <style name="CustomAnim">
+        <item name="android:windowEnterAnimation">@anim/custom_push_down_in</item>
+        <item name="android:windowExitAnimation">@anim/custom_push_up_out</item>
+    </style>
+
 </resources>
