--- a/privately/app/src/main/res/values/colors.xml
+++ b/privately/app/src/main/res/values/colors.xml
@@ -24,7 +24,7 @@
     <color name="title_bg">#f9f9f9</color>
 
     <color name="undo">#BF1717</color>
-    <color name="red_point">#FF2741</color>
+    <color name="red_point">#f02d2d</color>
     <color name="warning">#FFF4D7</color>
 
     <color name="black_gray_white">#ffebebeb</color>
