--- a/privately/app/src/main/res/layout/fragment_mail.xml
+++ b/privately/app/src/main/res/layout/fragment_mail.xml
@@ -12,9 +12,10 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
             android:id="@+id/recyclerView"
-            android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp">
 
         </androidx.recyclerview.widget.RecyclerView>
 
