--- a/privately/app/src/main/res/layout/holder_item.xml
+++ b/privately/app/src/main/res/layout/holder_item.xml
@@ -7,7 +7,7 @@
               android:orientation="horizontal"
               android:padding="7dp">
 
-    <com.demo.filter.view.FilterCheckedTextView
+    <com.zsoe.businesssharing.commonview.dropfilter.view.FilterCheckedTextView
         android:id="@+id/tv_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
