--- a/privately/app/src/main/res/layout/lv_item_filter.xml
+++ b/privately/app/src/main/res/layout/lv_item_filter.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.demo.filter.view.FilterCheckedTextView
+<com.zsoe.businesssharing.commonview.dropfilter.view.FilterCheckedTextView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tv_item_filter"
