--- a/privately/app/src/main/res/layout/dialog_makesureorder_layout.xml
+++ b/privately/app/src/main/res/layout/dialog_makesureorder_layout.xml
@@ -31,7 +31,7 @@
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
-            <android.support.v7.widget.AppCompatTextView
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
