--- a/privately/app/src/main/res/layout/item_companies_list_layout.xml
+++ b/privately/app/src/main/res/layout/item_companies_list_layout.xml
@@ -22,7 +22,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
         android:layout_toLeftOf="@+id/iv_shoucang"
         android:layout_toRightOf="@+id/product_image"
         android:orientation="vertical">
@@ -55,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
+        android:padding="@dimen/adaptive_10dp"
         android:src="@mipmap/shoucang_pre" />
 
     <View
