--- a/privately/app/src/main/res/layout/item_caigou_list_layout.xml
+++ b/privately/app/src/main/res/layout/item_caigou_list_layout.xml
@@ -19,23 +19,39 @@
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/product_image"
         android:layout_toRightOf="@+id/product_image"
         android:orientation="vertical">
 
-        <TextView
 
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:textColor="@color/text_3"
-            android:textSize="@dimen/text_one_five"
-            tools:text="【北京站】合伙人股权分配、
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/tv_xuq"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:textColor="@color/text_3"
+                android:textSize="@dimen/text_one_five"
+                tools:text="【北京站】合伙人股权分配、
 股权激励、顶层设计、股..." />
+
+            <TextView
+                android:id="@+id/tv_xuq"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
+                android:textColor="#15315E"
+                tools:text="需求" />
+        </RelativeLayout>
+
 
         <TextView
             android:id="@+id/tv_zhiwei"
