--- a/privately/app/src/main/res/layout/activity_set_up.xml
+++ b/privately/app/src/main/res/layout/activity_set_up.xml
@@ -98,13 +98,14 @@
     </RelativeLayout>
 
     <Button
+
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="40dp"
         android:layout_marginRight="20dp"
-        android:background="@drawable/bg_btn_login_selected"
+        android:background="@color/main_c"
         android:text="退出登录"
         android:textColor="@color/white"
         android:textSize="18dp" />
