--- a/privately/app/src/main/res/layout/item_latestnew_layout.xml
+++ b/privately/app/src/main/res/layout/item_latestnew_layout.xml
@@ -8,8 +8,8 @@
 
     <com.facebook.drawee.view.SimpleDraweeView xmlns:fresco="http://schemas.android.com/apk/res-auto"
         android:id="@+id/iv_image"
-        android:layout_width="110dp"
-        android:layout_height="110dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_margin="15dp"
@@ -21,7 +21,7 @@
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/iv_image"
         android:layout_marginLeft="15dp"
