--- a/privately/app/src/main/res/layout/activity_login.xml
+++ b/privately/app/src/main/res/layout/activity_login.xml
@@ -148,20 +148,68 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/adaptive_20dp"
         android:orientation="horizontal">
 
+        <View
+            style="@style/line_style"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/adaptive_70dp"
+            android:layout_marginRight="@dimen/adaptive_20dp"
+            android:layout_toLeftOf="@+id/textView" />
 
-        <LinearLayout
-            android:id="@+id/service"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="10dp">
+            android:layout_centerInParent="true"
+            android:text="OR"
+            android:textColor="@color/text_3"
+            android:textSize="@dimen/text_one_eight" />
 
 
-        </LinearLayout>
+        <View
+            style="@style/line_style"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/adaptive_20dp"
+            android:layout_marginRight="@dimen/adaptive_70dp"
+            android:layout_toRightOf="@+id/textView" />
     </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/adaptive_10dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/login_qq"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="@dimen/adaptive_15dp"
+            android:src="@mipmap/login_qq" />
+
+        <ImageView
+            android:id="@+id/login_weixin"
+
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+
+            android:padding="@dimen/adaptive_15dp"
+
+            android:src="@mipmap/login_weixin" />
+
+        <ImageView
+            android:id="@+id/login_weibo"
+
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="@dimen/adaptive_15dp"
+
+            android:src="@mipmap/login_weibo" />
+
+    </LinearLayout>
 </LinearLayout>
