--- a/privately/app/src/main/res/layout/fragment_me.xml
+++ b/privately/app/src/main/res/layout/fragment_me.xml
@@ -299,12 +299,14 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/imgage"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@mipmap/xinxiang" />
 
 
                     <TextView
+                        android:id="@+id/tv_xinxiang"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -359,12 +361,14 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/iamge2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@mipmap/liuyanban" />
 
 
                     <TextView
+                        android:id="@+id/tv_liuyan"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -514,60 +518,6 @@
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:orientation="horizontal">
-
-                <com.zsoe.businesssharing.commonview.SquareLinearLayout
-                    android:id="@+id/ll_bangzhu"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="1dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/simple_item_background_selector"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/bangzhu" />
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:text="帮助中心"
-                        android:textColor="@color/text_3"
-                        android:textSize="@dimen/text_one_five" />
-                </com.zsoe.businesssharing.commonview.SquareLinearLayout>
-
-                <com.zsoe.businesssharing.commonview.SquareLinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="1dp"
-                    android:layout_marginRight="1dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/simple_item_background_selector"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:visibility="invisible" />
-
-
-                <com.zsoe.businesssharing.commonview.SquareLinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="1dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/simple_item_background_selector"
-                    android:gravity="center"
-                    android:orientation="vertical"
-                    android:visibility="invisible" />
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.core.widget.NestedScrollView>
