--- a/privately/easeui/src/main/res/layout/ease_widget_title_bar.xml
+++ b/privately/easeui/src/main/res/layout/ease_widget_title_bar.xml
@@ -3,7 +3,7 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="@dimen/height_top_bar"
-    android:background="@color/top_bar_normal_bg"
+    android:background="@color/white2"
     android:gravity="center_vertical" >
 
     <RelativeLayout
@@ -15,6 +15,7 @@
 
         <ImageView
             android:id="@+id/left_image"
+            android:src="@drawable/back_arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -26,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textColor="#ffffff"
+        android:textColor="#333333"
         android:textSize="20sp" />
 
     <RelativeLayout
