--- a/privately/app/src/main/res/layout/item_bank_list_layout.xml
+++ b/privately/app/src/main/res/layout/item_bank_list_layout.xml
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
+        android:padding="@dimen/adaptive_10dp"
         android:src="@mipmap/shoucang_pre" />
 
     <View
