--- a/privately/app/src/main/res/layout/item_product_list_layout.xml
+++ b/privately/app/src/main/res/layout/item_product_list_layout.xml
@@ -37,7 +37,8 @@
 
         <TextView
             android:id="@+id/tv_zhiwei"
-
+            android:maxLines="2"
+            android:ellipsize="end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
