--- a/privately/app/src/main/res/layout/activity_financing_loans.xml
+++ b/privately/app/src/main/res/layout/activity_financing_loans.xml
@@ -44,6 +44,9 @@
             tl:tl_indicator_margin_top="2dp" />
 
 
+        <View
+            style="@style/line_style"
+            android:layout_alignParentBottom="true" />
     </RelativeLayout>
 
     <FrameLayout
