--- a/privately/app/src/main/res/layout/activity_basic_information.xml
+++ b/privately/app/src/main/res/layout/activity_basic_information.xml
@@ -92,6 +92,40 @@
             <View style="@style/line_style" />
 
             <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/simple_item_background_selector"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp">
+
+                <TextView
+                    style="@style/me_text_style"
+                    android:text="真实姓名" />
+
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/ed_zhenshi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/right_arrow23"
+                    android:background="@null"
+                    android:hint="请输入真实姓名"
+                    android:padding="15dp"
+                    android:textSize="@dimen/text_one_five" />
+
+                <ImageView
+                    android:id="@+id/right_arrow23"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@mipmap/right_arrow" />
+
+            </RelativeLayout>
+
+            <View style="@style/line_style" />
+
+            <RelativeLayout
 
                 android:id="@+id/rl_xingbie"
                 style="@style/me_layout_style">
