--- a/privately/app/src/main/res/layout/activity_register.xml
+++ b/privately/app/src/main/res/layout/activity_register.xml
@@ -191,6 +191,8 @@
                 android:textSize="14dp" />
 
             <TextView
+                android:id="@+id/tv_xieyi"
+                android:padding="@dimen/adaptive_3dp"
                 android:textColor="@color/main_c"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
